Apply clipping to scrollyteller to try to prevent it apearing under the header in fast-scrolling situations.

--- a/src/components/Block/styles.scss
+++ b/src/components/Block/styles.scss
@@ -2,6 +2,8 @@
 
 .scrollyteller {
   background-color: inherit;
+  clip: rect(0, auto, auto, 0);
+  clip-path: inset(0 0);
 }
 
 // Override Scrollyteller's internal sticky styles
